Agregamos staging de la rama cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <meta http-equiv=”Content-Type” content=”text/html; charset=UTF-8″ />
 <head>
-    <title>Maryjose Cobos</title>
-    <link rel="stylesheet" href="CSS/estilos.css">
+    <title>Comandos Git</title>
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
     <div id="container">
@@ -11,7 +11,8 @@
             Cabecera
         </div>
        <div id="post">
-            <h1>Hola Comunidad Platzi</h1>
+            <h1>Staggin Area</h1>
+		<p> git Add</p>
             <p>Esta es mi pequeña contribución, tratando de hacerlo solo un poco diferente para practiar mi HTML y CSS</p>
         </div>
     </div>
