Comit al master del blog post en su version mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,7 @@
             <h1>Staggin Area</h1>
 		<p> git Add</p>
             <p>Esta es mi pequeña contribución, tratando de hacerlo solo un poco diferente para practiar mi HTML y CSS</p>
+		<h2>Rama cabecera creada</h2>
         </div>
     </div>
 </body>
