--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,11 @@
        <div id="post">
             <h1>Hola Comunidad Platzi</h1>
             <p>Esta es mi pequeña contribución, tratando de hacerlo solo un poco diferente para practiar mi HTML y CSS</p>
-        </div>
+        
+
+	</div>
+
+	<div>Agregue un div al master </div>
     </div>
 </body>
 </html>
