--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            Cabecera Gatuna
         </div>
        <div id="post">
             <h1>Staggin Area</h1>
