--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,7 @@
 
 	<div>Agregue un div al master </div>
 		<h2>Rama cabecera creada</h2>
+        <h2>Muy bien</h2>
         </div>
     </div>
 </body>
