Update desde github
por que puedo

--- a/blogpost.html
+++ b/blogpost.html
@@ -18,7 +18,9 @@
 
 	<div>Agregue un div al master </div>
 		<h2>Rama cabecera creada</h2>
+	    
         <h2>Muy bien</h2>
+	    <p> hagamos un cambio desde git </p> 
         </div>
     </div>
 </body>
