--- a/blogpost.html
+++ b/blogpost.html
@@ -21,6 +21,7 @@
 	    
         <h2>Muy bien</h2>
 	    <p> hagamos un cambio desde git </p> 
+		<p> usemos ssh </p>
         </div>
     </div>
 </body>
