--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
+	<div>LOGO HEADER</div>
     <div id="container">
         <div id="cabecera">
             Cabecera Perrona
@@ -24,5 +25,6 @@
 		<p> usemos ssh </p>
         </div>
     </div>
+	<div>FOOTER 2 - footer</div>
 </body>
 </html>
