--- a/blogpost.html
+++ b/blogpost.html
@@ -23,6 +23,9 @@
         <h2>Muy bien</h2>
 	    <p> hagamos un cambio desde git </p> 
 		<p> usemos ssh </p>
+
+        <p> Estamos en readme mejorado</p>
+        <p>Disponble para todas las edades </p>
         </div>
     </div>
 	<div>FOOTER</div>
