--- a/blogpost.html
+++ b/blogpost.html
@@ -26,6 +26,7 @@
 
         <p> Estamos en readme mejorado</p>
         <p>Disponble para todas las edades </p>
+        <p> Estamos en readme y los creditos</p>
         </div>
     </div>
 	<div>FOOTER</div>
