creditos al team

--- a/blogpost.html
+++ b/blogpost.html
@@ -23,6 +23,7 @@
         <h2>Muy bien</h2>
 	    <p> hagamos un cambio desde git </p> 
 		<p> usemos ssh </p>
+        <p> nueva rama haciendo git stash cherry-pick</p>
         </div>
     </div>
 	<div>FOOTER</div>
