estamos en una stack branch

--- a/blogpost.html
+++ b/blogpost.html
@@ -27,6 +27,7 @@
         <p> Estamos en readme mejorado</p>
         <p>Disponble para todas las edades </p>
         <p> Estamos en readme y los creditos</p>
+        <p> git stash y luego luego git stash brach read-me-mejorado </p>
         </div>
     </div>
 	<div>FOOTER</div>
